--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNFirebaseStarter",
+  "name": "RNFirebaseBearbone",
   "version": "5.3.0",
   "private": true,
   "scripts": {
@@ -11,12 +11,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.12.1",
     "react": "16.8.3",
-    "react-native": "0.59.3",
-    "react-native-firebase": "^5.3.1"
+    "react-native": "^0.59.4",
+    "react-native-firebase": "^5.3.1",
+    "react-native-router-flux": "^4.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/runtime": "^7.4.3",
     "babel-jest": "^24.7.1",
     "fs-extra": "^7.0.1",
